--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,18 @@ body {
   
 }
 
+.header {
+    display: flex;
+    flex-direction: row;
+     justify-content:center;
+}
+
+.header__menu {
+    display: flex;
+    flex-direction: row;
+   /*  justify-content:center */ ;
+}
+
 .logo {
     width: 50px;
 }
