--- a/styles/style.css
+++ b/styles/style.css
@@ -12,12 +12,16 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content:center;
-    align-items: center;
+    justify-content: space-around;  
+    /* align-items: center; */
 }
 
 .menu {
     display: flex;
+}
+
+.menu__item {
+    margin-left: 100px;
 }
 
 .header__menu {
